# pockety

./: .gitignore  Cargo.toml  LICENSE  README.md  rustfmt.toml
assets/: auth-flow.drawio
examples/auth/: .gitignore  README.md
examples/auth/server/: Cargo.toml
examples/auth/server/src/: api.rs  error.rs  main.rs
examples/auth/web/: index.html  package.json  pnpm-lock.yaml
examples/auth/web/src/: App.tsx  index.tsx
pockety/: Cargo.toml
pockety/src/: auth.rs  error.rs  lib.rs  models.rs  pockety.rs
pockety/src/api/: add.rs  mod.rs  modify.rs  retrieve.rs
