[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
# web framework
axum = { version = "0.6", features = ["headers"] }
async-session = "3"

tower = "0.4"
tower-http = { version = "0.4", features = ["cors", "timeout", "trace"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }

# we need rand crate to generate a session secret
rand = "0.8"

# pocket api client
pockety = { path = "../../../pockety" }
